--- a/home.css
+++ b/home.css
@@ -1,10 +1,3 @@
-img {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: -1;
-  border: 3px solid #73AD21;
-}
 div.relative {
   background-color:lightblue;
   font-family:verdana;
@@ -13,9 +6,11 @@ div.relative {
   left: 30px;
   width: 700px;
   border: 3px solid #73AD21;
-}
+} 
 body {
   font-family: Arial;
+  padding: 60px;
+  background-image:url("artgallery.jpg");
 }
 
 * {
