--- a/home.css
+++ b/home.css
@@ -26,6 +26,7 @@ form.example button {
   float: left;
   width: 20%;
   padding: 10px;
+  background: #2196F3;
   color: white;
   font-size: 17px;
   border: 1px solid grey;
