--- a/home.css
+++ b/home.css
@@ -1,12 +1,38 @@
+/* The body */
 body {
   font-family: Arial;
   padding: 60px;
   background-image:url("artgallery.jpg");
 }
+
+
+
+/* The header size and color*/
 h1{
   font-size:300%;
   color:purple;
 }
+
+
+
+
+
+/*For the search button*/
+* {
+  box-sizing: border-box;
+}
+
+/* Style the search field */
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+
+/* Style the submit button */
 form.example button {
   float: left;
   width: 20%;
@@ -15,10 +41,17 @@ form.example button {
   color: white;
   font-size: 17px;
   border: 1px solid grey;
-  border-left: none;
+  border-left: none; /* Prevent double borders */
   cursor: pointer;
 }
 
 form.example button:hover {
   background: #0b7dda;
+}
+
+/* Clear floats */
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
 }
