--- a/home.css
+++ b/home.css
@@ -25,7 +25,7 @@ h1{
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
