--- a/home.css
+++ b/home.css
@@ -109,8 +109,8 @@ h1{
 
 /* Fake image */
 .fakeimg {
-  background-color: #d1d1e0;
-  width: 100%;
+  background-color: #C0C0C0;
+  width: 75%;
   padding: 20px;
 }
 
