--- a/home.css
+++ b/home.css
@@ -119,3 +119,43 @@ h1{
   display: table;
   clear: both;
 }
+
+
+
+/* Carousel */
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  -webkit-animation: fadeEffect 1s;
+  animation: fadeEffect 1s;
+}
+  
+/* Make the image fully responsive */
+.carousel-inner img {
+    width: 100%;
+    height: 50%;
+}
+
+.carousel-item h3{
+    color: #FFD993; 
+}
+
+.carousel-item p{
+    color: #FFD993; 
+}
+.iframe{
+    width: 75%;
+    height: auto;
+}
+
+/* Fade in tabs */
+@-webkit-keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
