--- a/home.css
+++ b/home.css
@@ -145,8 +145,8 @@ h1{
     color: #FFD993; 
 }
 .iframe{
-    width: 75%;
-    height: auto;
+    width: 50%;
+    height: 25%;
 }
 
 /* Fade in tabs */
