--- a/home.css
+++ b/home.css
@@ -145,8 +145,8 @@ h1{
     color: #FFD993; 
 }
 .iframe{
-    width: 50%;
-    height: 50%;
+    width: auto%;
+    height: auto%;
 }
 
 /* Fade in tabs */
