--- a/home.css
+++ b/home.css
@@ -133,8 +133,8 @@ h1{
   
 /* Make the image fully responsive */
 .carousel-inner img {
-    width: 100px;
-    height: 100px;
+    width: 75%;
+    height: 50%;
 }
 
 .carousel-item h3{
