--- a/home.css
+++ b/home.css
@@ -159,3 +159,18 @@ h1{
   from {opacity: 0;}
   to {opacity: 1;}
 }
+
+
+/* Center column */
+.centercolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+
+/* Right column */
+.rightcolumn {
+  float: right;
+  width: 25%;
+  padding-left: 20px;
+}
