--- a/home.css
+++ b/home.css
@@ -106,6 +106,26 @@ h1{
   width: 100%;
 }
 
+/* Left column 2 */
+.leftcolumn2 {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+/* Center column */
+.centercolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+
+/* Right column */
+.rightcolumn {
+  float: right;
+  width: 25%;
+  padding-left: 20px;
+}
+
 /* Add a card effect for articles */
 .card {
   background-color: white;
@@ -158,19 +178,4 @@ h1{
 @keyframes fadeEffect {
   from {opacity: 0;}
   to {opacity: 1;}
-}
-
-
-/* Center column */
-.centercolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
-}
-
-/* Right column */
-.rightcolumn {
-  float: right;
-  width: 25%;
-  padding-left: 20px;
 }
