--- a/home.css
+++ b/home.css
@@ -137,6 +137,7 @@ h1{
   background-color: white;
   padding: 20px;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* Clear floats after the columns */
