--- a/home.css
+++ b/home.css
@@ -17,6 +17,13 @@ h1{
   font-size:300%;
   color:purple;
 }
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  margin-top: 20px;
+}
+
 
 
 
