--- a/home.css
+++ b/home.css
@@ -219,3 +219,11 @@ h1{
   from {opacity: 0;}
   to {opacity: 1;}
 }
+
+/* Center image */
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
