--- a/home.css
+++ b/home.css
@@ -134,6 +134,7 @@ h1{
 .leftcolumn3 {
   float: left;
   width: 50%;
+  margin-bottom: -20px;
 }
 
 
@@ -160,6 +161,7 @@ h1{
 .rightcolumn3 {
   float: right;
   width: 50%;
+  margin-bottom: -20px;
 }
 
 
