--- a/home.css
+++ b/home.css
@@ -135,6 +135,7 @@ iframe{
 .leftcolumn3 {
   float: left;
   width: 50%;
+   padding-left: 20px;
 }
 
 
@@ -161,6 +162,7 @@ iframe{
 .rightcolumn3 {
   float: right;
   width: 50%;
+   padding-left: 20px;
 }
 
 
