--- a/Directory.css
+++ b/Directory.css
@@ -133,3 +133,29 @@ iframe{
 }
 
 
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+.leftcolumn2 {   
+  float: right;
+  width: 25%;
+  padding-left: 20px;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+
+/* Right column */
+.rightcolumn2 {
+  float: right;
+  width: 25%;
+  padding-left: 20px;
+}
