--- a/home.css
+++ b/home.css
@@ -17,7 +17,7 @@ iframe{
 /* The header size and color*/
 .header{
   padding: 30px;
-  font-size:300%;
+  font-size: 50px;
   color:purple;
 }
 /* Footer */
