--- a/Images.css
+++ b/Images.css
@@ -135,7 +135,7 @@ iframe{
 /* Centers an image */
 .center {
   display: block;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
 }
