--- a/Images.css
+++ b/Images.css
@@ -150,20 +150,20 @@ a {
 }
 
 a:hover {
-  background-color: #ddd;
+  background-color: white;
   color: black;
 }
 
 .previous {
-  background-color: #f1f1f1;
+  background-color: white;
   color: black;
 }
 
 .next {
-  background-color: #4CAF50;
+  background-color: Black;
   color: white;
 }
 
 .round {
-  border-radius: 50%;
+  border-radius: 100%;
 }
