--- a/Info.css
+++ b/Info.css
@@ -131,3 +131,18 @@ iframe{
   display: table;
   clear: both;
 }
+
+
+
+/* Left column 3 */
+.leftcolumn3 {
+  float: left;
+  width: 50%;
+   padding-left: 20px;
+}
+/* Right column 3 */
+.rightcolumn3 {
+  float: right;
+  width: 50%;
+   padding-left: 20px;
+}
