--- a/css/images.css
+++ b/css/images.css
@@ -5,7 +5,7 @@
 body {
   font-family: Arial;
   padding: 60px;
-  background-image:url("artgallery.jpg");
+  background-image:url("../image/artgallery.jpg");
 }
 /* Centers the link */
 div a {
@@ -101,8 +101,6 @@ iframe{
 }
 
 
-
-
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .leftcolumn, .rightcolumn {   
@@ -119,56 +117,6 @@ iframe{
   }
 }
 
-
-
-/* Left column */
-.leftcolumn {   
-  width: 100%;
-}
-
-/* Left column 2 */
-.leftcolumn2 {
-  float: left;
-  width: 25%;
-}
-/* Left column 3 */
-.leftcolumn3 {
-  float: left;
-  width: 50%;
-   padding-left: 20px;
-}
-
-
-
-/* Center column */
-.centercolumn {
-  float: left;
-  width: 25%;
-}
-
-
-
-/* Right column */
-.rightcolumn {
-  float: right;
-  width: 25%;
-}
-/* Right column 2*/
-.rightcolumn2 {
-  float: right;
-  width: 25%;
-}
-/* Right column 3 */
-.rightcolumn3 {
-  float: right;
-  width: 50%;
-   padding-left: 20px;
-}
-
-
-
-
-
 /* Add a card effect for articles */
 .card {
   background-color: white;
@@ -182,42 +130,38 @@ iframe{
   clear: both;
 }
 
-
-
-/* Carousel */
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  -webkit-animation: fadeEffect 1s;
-  animation: fadeEffect 1s;
-}
-  
-/* Make the image fully responsive */
-.carousel-inner img {
-    width: 100%;
-    height: 50%;
+/* Centers an image */
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
-.carousel-item h3{
-    color: #FFD993; 
+
+
+/* Buttons */
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 50px 50px;
 }
 
-.carousel-item p{
-    color: #FFD993; 
-}
-.iframe{
-    width: 50%;
-    height: auto;
+a:hover {
+  background-color: white;
+  color: black;
 }
 
-/* Fade in tabs */
-@-webkit-keyframes fadeEffect {
-  from {opacity: 0;}
-  to {opacity: 1;}
+.previous {
+  background-color: white;
+  color: black;
 }
 
-@keyframes fadeEffect {
-  from {opacity: 0;}
-  to {opacity: 1;}
+.next {
+  background-color: Black;
+  color: white;
+}
+
+.round {
+  border-radius: 100%;
 }
