--- a/css/laguardia_hall_library.css
+++ b/css/laguardia_hall_library.css
@@ -1,3 +1,18 @@
+.row > .column {
+  padding: 0 8px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Create four equal columns that floats next to eachother */
+.column {
+  float: left;
+  width: 25%;
+}
 /* Style the Image Used to Trigger the Modal */
 #myImg {
   border-radius: 5px;
