--- a/css/directory.css
+++ b/css/directory.css
@@ -17,7 +17,7 @@ iframe{
 /* The header size and color*/
 .header{
   font-size: 50px;
-  color: purple;
+  color: #DC143C;
 }
 /* Footer */
 .footer {
