--- a/css/laguardia_hall_library.css
+++ b/css/laguardia_hall_library.css
@@ -27,6 +27,19 @@
   overflow: auto;
   background-color: black;
 }
+/* The Modal2 (background) */
+.modal2 {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
 
 /* Modal Content */
 .modal-content {
@@ -59,6 +72,11 @@
 .mySlides {
   display: none;
 }
+/* Hide the slides by default */
+.mySlides2 {
+  display: none;
+}
+
 
 /* Next & previous buttons */
 .prev,
@@ -113,6 +131,14 @@ img.demo {
 
 .active,
 .demo:hover {
+  opacity: 1;
+}
+img.demo2 {
+  opacity: 0.6;
+}
+
+.active,
+.demo2:hover {
   opacity: 1;
 }
 
