--- a/css/style.css
+++ b/css/style.css
@@ -195,8 +195,10 @@ iframe{
   
 /* Make the image fully responsive */
 .carousel-inner img {
-    width: 100%;
-    height: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .carousel-item h3{
