--- a/css/style.css
+++ b/css/style.css
@@ -202,11 +202,11 @@ iframe{
 }
 
 .carousel-item h3{
-    color: #FFD993; 
+    color: #1E90FF; 
 }
 
 .carousel-item p{
-    color: #FFD993; 
+    color: #1E90FF; 
 }
 .iframe{
     width: 50%;
