--- a/css/laguardia_hall_library.css
+++ b/css/laguardia_hall_library.css
@@ -104,6 +104,15 @@
   top: 0;
 }
 
+/* Number text (1/3 etc) */
+.numbertext2 {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
 /* Caption text */
 .caption-container {
   text-align: center;
@@ -116,8 +125,15 @@ img.demo {
   opacity: 0.6;
 }
 
+img.demo2 {
+  opacity: 0.6;
+}
 .active,
 .demo:hover {
+  opacity: 1;
+}
+.active,
+.demo2:hover {
   opacity: 1;
 }
 
@@ -126,6 +142,14 @@ img.hover-shadow {
 }
 
 .hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+img.hover-shadow2 {
+  transition: 0.3s;
+}
+
+.hover-shadow2:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
