--- a/css/laguardia_hall_library.css
+++ b/css/laguardia_hall_library.css
@@ -37,6 +37,30 @@
   width: 90%;
   max-width: 1200px;
 }
+/* The Modal (background) */
+.modal2 {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content2 {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
 
 /* The Close Button */
 .close {
