--- a/css/info.css
+++ b/css/info.css
@@ -134,14 +134,15 @@ iframe{
 
 
 
-/* Left column 3 */
-.leftcolumn3 {
+/* Left column */
+.leftcolumn {
   float: left;
   width: 50%;
+  height: 50%;
    padding-left: 20px;
 }
-/* Right column 3 */
-.rightcolumn3 {
+/* Right column */
+.rightcolumn {
   float: right;
   width: 50%;
    padding-left: 20px;
