--- a/css/info.css
+++ b/css/info.css
@@ -138,7 +138,7 @@ iframe{
 .leftcolumn {
   float: left;
   width: 50%;
-  height: 50%;
+  height: 500px;
    padding-left: 20px;
 }
 /* Right column */
