--- a/css/info.css
+++ b/css/info.css
@@ -12,7 +12,7 @@ div a {
     text-align: center;
 }
 iframe{
-  float: right;
+  float: left;
 }
 /* The header size and color*/
 .header{
@@ -138,11 +138,11 @@ iframe{
 .leftcolumn {
   float: left;
   width: 50%;
-   padding-left: 20px;
+  padding-left: 20px;
 }
 /* Right column */
 .rightcolumn {
   float: right;
   width: 50%;
-   padding-left: 20px;
+  padding-left: 20px;
 }
