--- a/css/info.css
+++ b/css/info.css
@@ -125,6 +125,12 @@ iframe{
   padding: 20px;
   margin-top: 20px;
 }
+/* Add a card effect for articles */
+.card2 {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
 /* Clear floats after the columns */
 .row:after {
   content: "";
