--- a/css/laguardia_hall_library.css
+++ b/css/laguardia_hall_library.css
@@ -38,6 +38,30 @@
   max-width: 1200px;
 }
 
+
+/* The Modal (background) */
+.modal3 {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content3 {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
 /* The Close Button */
 .close {
   color: white;
