--- a/css/contact.css
+++ b/css/contact.css
@@ -5,14 +5,14 @@
 body {
   font-family: Arial;
   padding: 60px;
-  background-image:url("images/artgallery.jpg");
+  background-image:url("../images/artgallery.jpg");
 }
 
 /* Header/Blog Title */
 .header {
-  padding: 30px;
-  text-align: center;
-  background: white;
+  padding: 20px;
+  font-size: 30px;
+  color: #000000;
 }
 
 .header h1 {
@@ -53,13 +53,6 @@ body {
   float: left;
   width: 25%;
   padding-left: 20px;
-}
-
-/* Fake image */
-.fakeimg {
-  background-color: #d1d1e0;
-  width: 100%;
-  padding: 20px;
 }
 
 /* Add a card effect for articles */
