--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   background-image:url("../image/artgallery.jpg");
 }
 /* Centers the link */
-div a {
+div a{
     text-align: center;
 }
 iframe{
@@ -26,10 +26,6 @@ iframe{
   text-align: center;
   margin-top: 20px;
 }
-
-
-
-
 
 /* Navigation bar */
 .topnav {
@@ -100,9 +96,6 @@ iframe{
   }
 }
 
-
-
-
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .leftcolumn, .rightcolumn {   
@@ -119,7 +112,10 @@ iframe{
   }
 }
 
-
+/* top column */
+.topcolumn {
+  width: 100%;
+}
 
 /* Left column */
 .leftcolumn {   
@@ -138,15 +134,11 @@ iframe{
    padding-left: 20px;
 }
 
-
-
 /* Center column */
 .centercolumn {
   float: left;
   width: 25%;
 }
-
-
 
 /* Right column */
 .rightcolumn {
@@ -165,15 +157,21 @@ iframe{
    padding-left: 20px;
 }
 
-
-
-
-
 /* Add a card effect for articles */
 .card {
   background-color: white;
   padding: 20px;
   margin-top: 20px;
+}
+/*Directory page use*/
+.card-dir {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.card-dir a{
+  text-align: left;
 }
 /* Clear floats after the columns */
 .row:after {
